Changes input to solve a bug on iOs  (input number not working) on style

--- a/css/style.css
+++ b/css/style.css
@@ -199,3 +199,11 @@ input[type=text], input[type=number], button {
     opacity: 1;
   }
 }/*# sourceMappingURL=style.css.map */
+
+input, input:before, input:after {
+  -webkit-user-select: initial;
+  -khtml-user-select: initial;
+  -moz-user-select: initial;
+  -ms-user-select: initial;
+  user-select: initial;
+}
